Fix word break in the 2FA title (withdraw screen)

--- a/web/src/screens/WalletsScreen/WalletsScreen.pcss
+++ b/web/src/screens/WalletsScreen/WalletsScreen.pcss
@@ -226,9 +226,13 @@
         background: var(--input-background-color);
         border-radius: calc(var(--gap) * 0.33);
         left: calc(var(--gap) * 1.66);
+        max-width: 90%;
+        overflow: hidden;
         padding: calc(var(--gap) * 0.33) var(--gap);
         position: absolute;
+        text-overflow: ellipsis;
         top: 0;
+        white-space: nowrap;
       }
     }
 
